--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -3,4 +3,5 @@ h3 {
     font-size: 8vmin;
     margin-top: 100px !important;
     margin-bottom: 250px;
+    font-family: 'New Tegomin', serif !important;
 }
